# AMHE

./: merge_bbob.py  pyproject.toml
bbob_results/: f10_d2_i1_classic.csv  f10_d2_i1_surrogate.csv  f11_d2_i1_classic.csv  f11_d2_i1_surrogate.csv  f12_d2_i1_classic.csv  f12_d2_i1_surrogate.csv  f13_d2_i1_classic.csv  f13_d2_i1_surrogate.csv  f14_d2_i1_classic.csv  f14_d2_i1_surrogate.csv  f15_d2_i1_classic.csv  f15_d2_i1_surrogate.csv  f16_d2_i1_classic.csv  f16_d2_i1_surrogate.csv  f17_d2_i1_classic.csv  f17_d2_i1_surrogate.csv  f18_d2_i1_classic.csv  f18_d2_i1_surrogate.csv  f1_d2_i1_classic.csv  f1_d2_i1_surrogate.csv  f20_d2_i1_classic.csv  f20_d2_i1_surrogate.csv  f21_d2_i1_classic.csv  f21_d2_i1_surrogate.csv  f22_d2_i1_classic.csv  f22_d2_i1_surrogate.csv  f23_d2_i1_classic.csv  f23_d2_i1_surrogate.csv  f24_d2_i1_classic.csv  f24_d2_i1_surrogate.csv  f2_d2_i1_classic.csv  f2_d2_i1_surrogate.csv  f3_d2_i1_classic.csv  f3_d2_i1_surrogate.csv  f4_d2_i1_classic.csv  f4_d2_i1_surrogate.csv  f5_d2_i1_classic.csv  f5_d2_i1_surrogate.csv  f6_d2_i1_classic.csv  f6_d2_i1_surrogate.csv  (+6 more)
bbob_results_2000evals/: f10_d10_i1_classic.csv  f10_d10_i1_surrogate.csv  f10_d20_i1_classic.csv  f10_d20_i1_surrogate.csv  f10_d2_i1_classic.csv  f10_d2_i1_surrogate.csv  f10_d40_i1_classic.csv  f10_d40_i1_surrogate.csv  f10_d5_i1_classic.csv  f10_d5_i1_surrogate.csv  f11_d10_i1_classic.csv  f11_d10_i1_surrogate.csv  f11_d20_i1_classic.csv  f11_d20_i1_surrogate.csv  f11_d2_i1_classic.csv  f11_d2_i1_surrogate.csv  f11_d40_i1_classic.csv  f11_d40_i1_surrogate.csv  f11_d5_i1_classic.csv  (+221 more)
(+1245 files in other folders)
