[project]
name = "des-surrogate"
version = "0.1.0"
description = "des algorithm with surrogate model to limit the evaluation function runs"
authors = [
    {name = "Filip",email = "fbudzynski56@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2.6,<3.0.0)",
    "deap (>=1.4.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
